--- a/css/typography.css
+++ b/css/typography.css
@@ -23,7 +23,7 @@ body {
 }
 
 .subheader-text {
-  font-size: 20px;
+  font-size: 25px;
   font-weight: 700;
 }
 
@@ -46,4 +46,6 @@ body {
   display: -webkit-box;
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
+  font-size: 20px;
+  font-weight: 700;
 }
